# mantui

./: README.md  setup.cfg
src/mantui/: __main__.py  app.py  man_to_md.py  mantui.py
