[metadata]
name = mantui
version = attr: mantui.__version__
author = TomJGooding
description = A friendly terminal user interface for Linux man pages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/mantui
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.24.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    textual[dev]
